<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DA000000"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/txtCalc"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:gravity="end"
                android:paddingRight="10dp"
                android:text="0"
                android:textSize="50sp"
                android:textColor="@color/white"
                android:background="#3C3C3C"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btnOne"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:text="@string/One"
                android:textAlignment="center"
                android:textSize="20sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:text="@string/Two"
                android:textAlignment="center"
                android:textSize="20sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btnThree"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:text="@string/Three"
                android:textAlignment="center"
                android:textSize="20sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="#FF9800"
                android:text="@string/Plus"
                android:textAlignment="center"
                android:textSize="20sp"
                app:cornerRadius="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btnFour"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:text="@string/Four"
                android:textAlignment="center"
                android:textSize="20sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btnFive"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:text="@string/Five"
                android:textAlignment="center"
                android:textSize="20sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btnSix"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:text="@string/Six"
                android:textAlignment="center"
                android:textSize="20sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="#FF9800"
                android:text="@string/Minus"
                android:textAlignment="center"
                android:textSize="20sp"
                app:cornerRadius="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:text="@string/Seven"
                android:textAlignment="center"
                android:textSize="20sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btnEight"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:text="@string/Eight"
                android:textAlignment="center"
                android:textSize="20sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btnNine"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:text="@string/Nine"
                android:textAlignment="center"
                android:textSize="20sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="#FF9800"
                android:text="@string/Divided"
                android:textAlignment="center"
                android:textSize="20sp"
                app:cornerRadius="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btnEquals"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/purple_700"
                android:text="@string/Equals"
                android:textAlignment="center"
                android:textSize="20sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btnZero"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:text="@string/Zero"
                android:textAlignment="center"
                android:textSize="20sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="#3F51B5"
                android:text="@string/Dot"
                android:textAlignment="center"
                android:textSize="20sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="#FF9800"
                android:text="@string/Multiply"
                android:textAlignment="center"
                android:textSize="20sp"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>